Contrast fix for accessibility

--- a/app/components/organisms/git-widget/fsk-git-widget.scss
+++ b/app/components/organisms/git-widget/fsk-git-widget.scss
@@ -105,7 +105,7 @@
         align-items: center;
         gap: 5px;
         font-size: 11px;
-        color: #57606a;
+        color: var(--color-inverse);
         justify-content: flex-end;
         margin-top: 10px;
 
